Prevent zoom on mobile double clicks

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ canvas {
   animation: glowing 1500ms infinite;
 }
 
+.sub-note {
+	font-size: 1rem;
+}
+
 #third-kill {
 	font-size: 1rem;
 }
